syntax = "proto3";

package auth;
option go_package="./v1";

message Product{
  uint32 id=1;
  string name=2;
  float price=3;
  uint32 CreatedAt=4;
}
// Get all products
message GetProductsRequest{}

message GetProductsResponse{
   repeated Product products=1;
}
// Get By Id
message GetProductByIdRequest{
  uint32 id=1;
}
message GetProductByIdResponse{
  Product product = 1;
}

// Create
message CreateProductRequest{
   string name=1;
   float price=2;
}
message CreateProductResponse{
   uint32 productId=1;
}

// Update
message UpdateProductRequest{
    uint32 id=1;
    optional string name=2;
    optional float price=3;
}
message UpdateProductResponse{
    uint32 productId=1;
}

// Delete
message DeleteProductRequest{
    uint32 productId=1;
}
message DeleteProductResponse{
    uint32 statusCode = 1;
    uint32 message = 2;
}
//
service ProductService{
  rpc GetProducts (GetProductsRequest) returns (GetProductsResponse);
  rpc GetProductById (GetProductByIdRequest) returns (GetProductByIdResponse);
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
}






